--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <h1 class=" font-BebasNeue text-9xl text-center hover:text-amber-300 mb-4 cursor-pointer">learn <span">physics</span> in a easy way</h1>
       <p class="font-BebasNeue text-2xl text-center">no need to jump from website to website ,all in one place!</p>
     </section>
+    <section class="flex justify-center">
+      <a href="/src/pages/signup.html" class="inline-block">
+        <button class="bg-black text-gray-300 cursor-pointer hover:bg-amber-300 hover:text-gray-900 py-2 px-4 rounded-full border border-gray-700 hover:border-amber-300 font-BebasNeue transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-amber-300 focus:ring-offset-2 focus:ring-offset-gray-900">
+          sign up
+        </button>
+      </a>
+    </section>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
