--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- //navigation bar -->
    <nav class="flex justify-center">
     <ul class=" font-BebasNeue flex gap-7 mt-15 border-2 rounded-4xl p-3 text-2xl hover:bg-amber-300">
-      <li class="">Home</li>
-      <li>Resources</li>
-      <li>Chapters</li>
+      <li class=""><a href="/src/pages/home.html">Home</a></li>
+      <li><a href="/src/pages/resource.html">Resources</a></li>
+      <li><a href="/src/pages/chapters.html">Chapters</a></li>
     </ul>
    </nav>
    <!-- hero section -->
