--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
     <section class="flex justify-center">
       <a href="/src/pages/signup.html" class="inline-block">
-        <button class="bg-black text-gray-300 cursor-pointer hover:bg-amber-300 hover:text-gray-900 py-2 px-4 rounded-full border border-gray-700 hover:border-amber-300 font-BebasNeue transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-amber-300 focus:ring-offset-2 focus:ring-offset-gray-900">
+        <button class="bg-black text-gray-300  text-3xl cursor-pointer hover:bg-amber-300 hover:text-gray-900 py-2 px-4 rounded-full border border-gray-700 hover:border-amber-300 font-BebasNeue transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-amber-300 focus:ring-offset-2 focus:ring-offset-gray-900">
           sign up
         </button>
       </a>
