created a whole new look and feel

--- a/index.html
+++ b/index.html
@@ -7,27 +7,20 @@
     <title>physics</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <!-- //navigation bar -->
-   <nav class="flex justify-center">
-    <ul class=" font-BebasNeue flex gap-7 mt-15 border-2 rounded-4xl p-3 text-2xl hover:bg-amber-300">
-      <li class=""><a href="/src/pages/home.html">Home</a></li>
-      <li><a href="/src/pages/resource.html">Resources</a></li>
-      <li><a href="/src/pages/chapters.html">Chapters</a></li>
-    </ul>
-   </nav>
-   <!-- hero section -->
-    <section class="m-30">
-      <h1 class=" font-BebasNeue text-9xl text-center hover:text-amber-300 mb-4 cursor-pointer">learn <span">physics</span> in a easy way</h1>
-      <p class="font-BebasNeue text-2xl text-center">no need to jump from website to website ,all in one place!</p>
-    </section>
-    <section class="flex justify-center">
-      <a href="/src/pages/signup.html" class="inline-block">
-        <button class="bg-black text-gray-300  text-3xl cursor-pointer hover:bg-amber-300 hover:text-gray-900 py-2 px-4 rounded-full border border-gray-700 hover:border-amber-300 font-BebasNeue transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-amber-300 focus:ring-offset-2 focus:ring-offset-gray-900">
-          sign up
-        </button>
-      </a>
-    </section>
-    <script type="module" src="/src/main.js"></script>
+  <body class="bg-[#fdf6f0]">
+    <div class="border-2 border-black min-h-screen w-auto m-8">
+      <h1 class="text-3xl p-6 font-BebasNeue font-extrabold text">learnphy</h1>
+      <h1
+        class="font-BebasNeue font-extrabold text-8xl flex justify-center mt-50">
+        learn physics in a visual way!
+      </h1>
+      <div class="flex justify-center mt-8">
+        <a href="/src/pages/signup.html"
+          class="px-4 py-1 border-2 font-BebasNeue  border-black text-black text-2xl mt-7 font-medium hover:bg-black hover:cursor-pointer hover:text-white transition duration-300">
+          signup
+        </a>
+        <!-- <a href=""></a> -->
+      </div>
+    </div>
   </body>
 </html>
