idk what ive added

--- a/index.html
+++ b/index.html
@@ -7,20 +7,47 @@
     <title>physics</title>
     <link href="/src/style.css" rel="stylesheet" />
   </head>
-  <body class="bg-[#fdf6f0]">
+  <body class="bg-white">
+    <!-- main container -->
     <div class="border-2 border-black min-h-screen w-auto m-8">
       <h1 class="text-3xl p-6 font-BebasNeue font-extrabold text">learnphy</h1>
       <h1
-        class="font-BebasNeue font-extrabold text-8xl flex justify-center mt-50">
-        learn physics in a visual way!
+        class="font-BebasNeue font-extrabold text-7xl text-center
+ flex justify-center mt-50">
+        Master Physics Visually – Learn with Intuition, Not Just Equations.
       </h1>
+      <p class="text-2xl font-mono font-semibold text-center underline">Interactive visual explanations for every physics concept – made for learners like you.</p>
+      <!-- signup div -->
       <div class="flex justify-center mt-8">
         <a href="/src/pages/signup.html"
-          class="px-4 py-1 border-2 font-BebasNeue  border-black text-black text-2xl mt-7 font-medium hover:bg-black hover:cursor-pointer hover:text-white transition duration-300">
+          class="px-4 py-1 border-2 font-mono font-semibold  border-black text-black text-2xl mt-7 font-medium hover:bg-black hover:rotate-12 hover:transition-shadow hover:cursor-pointer hover:text-white transition duration-300">
           signup
         </a>
-        <!-- <a href=""></a> -->
+       </div>
+       <hr class="mt-20">
+       <!-- why choose us -->
+        <div>
+          <h1 class="text-6xl font-BebasNeue  p-5 ">why learn visually?</h1>
+        </div>
+        <hr class="mb-4">
+        <!-- cards section -->
+      <div class="flex justify-center-safe gap-2 p-5">
+        <div class=" h-60 w-80 border-1  flex justify-center items-center hover:rotate-12 hover:resize-20">dummy content</div>
+        <div class=" h-60 w-80 border-1  flex justify-center items-center">dummy content</div>
+        <div class=" h-60 w-80 border-1  flex justify-center items-center">dummy content</div>
+        <div class=" h-60 w-80 border-1  flex justify-center items-center">dummy content</div>
       </div>
+      <hr class="">
+
+      <!-- cards section end -->
+
+<!-- footer -->
+
+             <div>
+               <h1 class="text-6xl font-BebasNeue p-4">about dev</h1>
+             </div>
+
+      <!--footer end  -->
     </div>
   </body>
 </html>
