--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -7,7 +7,7 @@
   <link href="/src/style.css" rel="stylesheet" />
 
 </head>
-<body class="bg-[#fdf6f0]">
+<body class="bg-white">
   <div class="border-2 border-black min-h-screen w-auto m-8">
     <div class="flex justify-center items-center">
     <form class="bg-white p-8 border-2 shadow-md w-full max-w-sm space-y-6 mt-50">
@@ -35,7 +35,7 @@
       type="submit" 
       class="w-full bg-indigo-600 text-white py-2  hover:bg-indigo-700 transition duration-200"
     >
-      Create Account
+     <a href="/src/pages/chapters.html"> Create Account</a>
     </button>
   </form>
   </div>
